tests/fixtures/errors/method_unknown_arg.z
main: function is {
    s: "abc".string
    x: s.stringview from: 0 to: 1
    print "\{x}"
}
